# initial-setup

./: .gitignore  CMakeLists.txt  config.hxx.in
cmake/: FindGTKMM.cmake
data/: CMakeLists.txt  desktop.in  gresource.xml.in  gschema.xml.in
data/ui/: window.glade  window.glade~
src/: Application.cxx  Application.hxx  CMakeLists.txt  Window.cxx  Window.hxx  Worker.cxx  Worker.hxx  main.cxx
src/Exec/: Exec.cxx  Exec.hxx
src/Page/: Page.cxx  Page.hxx
src/Page/Confirm/: ConfigColumn.cxx  ConfigColumn.hxx  Confirm.cxx  Confirm.hxx
src/Page/Disk/: Disk.cxx  Disk.hxx  DiskColumn.cxx  DiskColumn.hxx
src/Page/Method/: Method.cxx  Method.hxx
src/Page/Summary/: Summary.cxx  Summary.hxx
src/Page/Timezone/: Timezone.cxx  Timezone.hxx
src/Page/User/: User.cxx  User.hxx
src/Page/Welcome/: Welcome.cxx  Welcome.hxx
